--- a/index.css
+++ b/index.css
@@ -1,50 +1,122 @@
 /* Palette: https://coolors.co/ffcdb2-ffb4a2-e5989b-b5838d-6d6875 */
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 :root {
-    --a: #ffcdb2;
-    --b: #ffb4a2;
-    --c: #e5989b;
-    --d: #b5838d;
-    --e: #6d6875;
+    --a: #E8D1C5;
+    --b: #EDDCD2;
+    --c: #FFF1E6;
+    --d: #F0EFEB;
+    --e: #EEDDD3;
+    --f: #EDEDE8;
 }
 
 * {
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 
 body {
+    background-color: var(--a);
     margin: 0px;
 }
 
 header {
-    background-color: #f1f1f1;
+    background-color: var(--d);
     text-align: center;
     padding: 20px;
 }
 
 navbar {
-    display: flex;
-    flex-wrap: nowrap;
+    display: block;
     overflow: hidden;
-    background-color: #333;
+    background-color: var(--c);
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    align-content: center;
 }
 
 navbar a {
-    color: white;
+    color: black;
     text-align: center;
     float: left;
     display: block;
     padding: 14px 16px;
     transition: background-color, color, 0.5s;
-    text-decoration: ginone;
-    flex: none;
+    text-decoration: none;
+
+    
 }
 
 navbar a:hover {
-    background-color: #ccc;
-    color: black;
+    background-color: var(--b);
 }
   
+.row {
+    padding: 0 10%;
+}
+
+.row {
+    display: table;
+    align-items: center;
+}
+
+.column {
+    float: left;
+}
+
+.column.side {
+    width: 25%;
+}
+
+.column.middle {
+    width: 50%;
+}
+
+.card {
+    display: block;
+    background-color: var(--b);
+    margin: 20px;
+    padding: 5px 20px;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
+}
+
+.card:nth-child(odd) {
+    transform: rotate(0.5deg);
+}
+
+.card:nth-child(odd) > * {
+    transform: rotate(-0.5deg);
+}
+
+.card:nth-child(even) {
+    transform: rotate(-0.5deg);
+}
+
+.card:nth-child(even) > * {
+    transform: rotate(0.5deg);
+}
+
+.card h2 {
+    text-align: center;
+}
+
+.card img {
+    display: block;
+    width: 300px;
+    max-width: 100%;
+    max-height: 300px;
+    object-fit: scale-down;
+    margin: auto;
+    padding-bottom: 16px;
+}
+
+.card.profile img {
+    margin-top: 16px;
+    padding-bottom: 0px;
+    border-radius: 100%;
+}
 
 @media screen and (max-width: 600px) {
     navbar {
@@ -56,5 +128,19 @@ navbar a:hover {
     navbar a {
         flex: 50%;
         float: none;
+    }
+}
+
+
+@media screen and (max-width: 1000px) {
+    .column.side, .column.middle {
+        width: 100%;
+    }
+
+    .column:not(:last-child)::after {
+        content: "";
+        display: block;
+        border-radius: 100px;
+        border: 5px dashed var(--c);
     }
 }
